implement JavaScript logic to the web calculator

--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
         <div class="button equals double">=</div>
       </div>
     </div>
+    <script src="assets/calculator.js"></script>
   </body>
 </html>
